<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/navigation_videos">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.inf.myjavavideo.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_videos"
        android:name="com.inf.myjavavideo.ui.videos.VideosFragment"
        android:label="@string/my_videos"
        tools:layout="@layout/fragment_videos" />

    <fragment
        android:id="@+id/navigation_playlists"
        android:name="com.inf.myjavavideo.ui.playlists.PlaylistsFragment"
        android:label="@string/playlists"
        tools:layout="@layout/fragment_playlists" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.inf.myjavavideo.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
</navigation> 